css/styles.css
* {
    box-sizing: border-box;
    margin: 0 auto;
    padding: 0;
}

ul {
    list-style: none;
    padding-left: 0;
}

a {
    text-decoration: none;
}
/* 
------------------------------------------------------------------------------
BASE STYLING
------------------------------------------------------------------------------
*/
img {
    width: 90%;
    margin: 2em auto;
    margin-top: 0;
    padding: 0;
}

body {
    font-family: 'Oswald', sans-serif;
    font-weight: 300;
    margin: 0 auto;
    max-width: 1024px;
    background-color: whitesmoke;
    
}

main {
    padding: 0;
    margin-top: 1rem;
    background-color: white;

}
footer {
    background-color:whitesmoke;
    margin: 0 auto;
    padding: 1em;
    /* justify-content: flex-end; */
}

.mobile-footer {
    display: flex;
    justify-content: flex-end;
}

h5 {
    margin: 0;
    margin-right: auto;
    margin-left: 2rem;
}
#footer-nav{
    display: none;
    margin: 2rem;
    margin-top: 0;
    width: 100%;
    
}

.bottom-nav {
    display: none;
}

hr {width: 90%;
    background-color: whitesmoke;
}


content{
    display: flex;
    justify-content: center;
    padding: 2em;
}

header {
    padding: 1em;
    background-color: whitesmoke;

}

.nav-pic { 
    padding: 3em;
    margin: 0 0;
    padding-bottom: 0;
}

p {
    font-size: 1.25em;
    padding: 1.5rem;
    padding-bottom: 2rem;
}

a{
    color:dodgerblue;
 }

a:link{
    text-decoration: none;
    color: black;
}

a:hover {
    color: gold;
    
}

#contact {
    background-color: whitesmoke;
    margin: 0;
    padding: 3em;
    text-align: center;
    line-height: 2rem;

}

a:focus {
    color:aquamarine ;
}

section {
    padding-top: 0; 
    text-align: center;
}


footer {
    padding: 1rem 0;
}

/* 
------------------------------------------------------------------------------
MAIN STYLING
------------------------------------------------------------------------------
*/
h1, .main-nav {
text-align: center;

}

.main-nav, .man-nav li {
    width: 100%;
}

.main-nav a {
    text-transform: uppercase;
}

.main-nav li {
    padding: 10px 0;
    margin: 5px auto;
}
.nav-item {
   display: flex;
   flex-direction: column;
   padding: .5rem;
   margin: 0.25rem 0;
   list-style: none;
   font-weight: bold;
   background-color: white;
}


#student-name {
 display: flex;
 justify-content: center;
 margin: 0 auto;
 margin-bottom: .5em;
 margin-left: auto;
}


#portfolio {
    text-align: center;
    padding: 3rem 0;
    margin-top: 1rem;
}


#intro {
    text-align: center;
    padding: 1em;
    margin: 0;
}

h2 {
    margin-top: 0;
}

#back-to-top{
    margin-left: auto;
    margin: 0;
    padding-right: 2rem;
}
/* 

------------------------------------------------------------------------------
MEDIA QUERIES
------------------------------------------------------------------------------
*/

@media screen and (min-width: 768px){
    
    ul {
        display: flex;
        justify-content: center;
    }
    .main-nav{
        margin-top: 0;
    }
    .main-nav li {
        /* display: flex;    */
        margin-top: 0;
        width: auto;
        margin-right: 15px;
        background-color: whitesmoke;
    } 
    .nav-item {
        background-color: whitesmoke;
    }
    .main-nav li:last-child{
        margin-right: 0;
    }

    .main-content {
        display: flex;
        flex-direction: row;
        justify-content: space-around;
        flex-wrap: wrap;
        background-color: white;
    }

    section {
        width: 50%;
        margin: 0 auto;
        padding: 0 1em;
    }
    

    .mobile-footer {
        display: flex;
    
    }

    #footer-nav {
        display: flex;    
        justify-content: flex-end;
        
    }

    #intro_paragraph_image {
        display: flex;
        flex-direction: row-reverse;
        justify-content: center;
    } 

    .nav-pic { 
        padding-top: 1.25em;
        padding-right: 1em;
    } 

    #portfolio {
        display: flex;
        flex-direction: column;
        margin-left: auto;
        margin-top: 1.5rem;
        padding: 1rem;
        background-color: white;
        width: 100%;
    }

    #back-to-top {
        display: none;
     }
    
}





@media screen and (min-width: 1024px) { 
    
    
    .header-flex {
        display: flex;
        justify-content: space-between;
        
    }

    ul {
        display: flex;
        justify-content: flex-end;
        margin: 0;
    }

    .nav-item {
        background-color: whitesmoke;
    }

    section {
        width: 33%;
        margin: 0 auto;
        padding: 0 .5em;
    }
    

   #back-to-top {
       display: none;
   }

   #student-name {
       margin: 0;
   }
    img {
        width: 100%;
        padding: 0;
    }
  }

  

